# Procurement-Accessibility-Analysis

./: .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  RAG.md  README.md  pyproject.toml  requirements.txt  test_api.py
data/: sample_tender_documents.json
src/procurement_analysis/: __init__.py  api.py  barrier_detector.py  main.py
tests/: __init__.py  test_api.py  test_barrier_detector.py
